* Put map behind search view again to avoid jumps when switching between small and expanded search view * Reduce padding aroung graphhopper logo on small screens * Fix loading indicator not being shown which also caused multiple map zooms during route requests

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -68,7 +68,7 @@
     }
 
     .map {
-        grid-row: 2 / span 2;
+        grid-row: 1 / span 3;
     }
 
     .sidebar {
